# serialTest

./: CMakeLists.txt  LICENSE  QComboBoxMoreSignal.h  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  receivethread.cpp  receivethread.h  serialTest_zh_CN.ts
include/: crc.h  mainwindow.h  mainwindow.ui  receivethread.h
src/: QComboBoxMoreSignal.cpp  mainwindow.cpp  receivethread.cpp
